[package]
name = "grpc-server"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "grpc-server"
path = "src/server.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
prost = "0.12.4"
prost-types = "0.12.4"
protobuf = "3.4.0"
tokio = { version = "1.37.0", features = ["macros","rt-multi-thread"] }
tonic = "0.11.0"


[build-dependencies]
tonic-build = "0.11.0"
